redux, createStore, Provider, connect

--- a/src/server/views/frontend/index.hbs
+++ b/src/server/views/frontend/index.hbs
@@ -15,6 +15,7 @@
           isMobile:'{{{ isMobile }}}'
         }
       }
+      window.initialState=initialState;
     </script>
     <script src="/vendor.bundle.js"></script>
     <script src="/main.bundle.js"></script>
